--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,11 +1,12 @@
 
 <section class="section products__section">
   <div class="container products__container">
-    <p>100% natural</p>
-    <h2>products</h2>
+    <p class="products__text">100% natural</p>
+    <h2 class="products__title">products</h2>
     <ul class="products__list">
-      <li>
-        <picture>
+      <li class="products__item products__item--ice-cream">
+        <div class="products__item-pic-cont">
+        <picture class="products__item-pic">
           <source
             srcset="./images/img/desktop/products/product1@1x.jpg 1x,
             ./images/img/desktop/products/product1@1x.jpg 2x"
@@ -27,18 +28,20 @@
             class=""
           />
         </picture>
-        <h3>ice cream</h3>
-        <svg>
+      </div>
+        <h3 class="products__item-title">ice cream</h3>
+        <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
         </svg>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et. 
           dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button"></button>
+        <button type="button" class="button button--white products__button"></button>
       </li>
-      <li>
-        <picture>
+      <li class="products__item products__item--coffee">
+        <div class="products__item-pic-cont">
+        <picture class="products__item-pic">
           <source
             srcset="./images/img/desktop/products/product2@1x.jpg 1x,
             ./images/img/desktop/products/product2@1x.jpg 2x"
@@ -60,18 +63,20 @@
             class=""
           />
         </picture>
-        <h3>ice coffee</h3>
-        <svg>
+      </div>
+        <h3 class="products__item-title">ice coffee</h3>
+        <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
         </svg>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et. 
           dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button"></button>
+        <button type="button" class="button button--white products__button"></button>
       </li>
-      <li>
-        <picture>
+      <li class="products__item products__item--milkshake">
+        <div class="products__item-pic-cont">
+        <picture class="products__item-pic">
           <source
             srcset="./images/img/desktop/products/product3@1x.jpg 1x,
             ./images/img/desktop/products/product3@1x.jpg 2x"
@@ -93,104 +98,17 @@
             class=""
           />
         </picture>
-        <h3>milkshakes</h3>
-        <svg>
+      </div>
+        <h3 class="products__item-title">milkshakes</h3>
+        <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
         </svg>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et. 
           dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button"></button>
+        <button type="button" class="button button--white products__button"></button>
       </li>
     </ul>
-
-<!--     <ul class="products__list">
-      <li class="products__item">
-        <div class="products__location-block products__location-block--coffee">
-          <h3 class="products__location-title">cafe</h3>
-        </div>
-        <div class="products__text-block products__text-block--border">
-          <p class="products__main-text products__main-text--city">Chicago</p>
-          <p class="products__secondary-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        </div>
-        <div class="products__text-block products__text-block--border">
-          <p class="products__main-text">Monday - Friday</p>
-          <p class="products__time-text">06:00 AM - 10:00 PM</p>
-          <p class="products__main-text">Saturday - Sunday</p>
-          <p class="products__time-text">08:00 AM - 16:00 PM</p>
-      </div>
-      <div class="products__text-block">
-        <a class="products__secondary-text products__contacts" href="tel:+610383766284">
-          +61(0) 383 766 284 
-        </a>
-        <a class="products__secondary-text products__contacts"
-        href="mailto:noreply@envato.com">
-        noreply@envato.com
-        </a>
-      </div>
-      </li>
-      <li class="products__item">
-
-        <div class="products__location-block products__location-block--milkshake">
-          <h3 class="products__location-title">foodtruck</h3>
-        </div>
-        <div class="products__text-block products__text-block--border">
-          <p class="products__main-text products__main-text--city">Los Angeles</p>
-          <p class="products__secondary-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        </div>
-        <div class="products__text-block products__text-block--border">
-          <p class="products__main-text">Monday - Friday</p>
-          <p class="products__time-text">06:00 AM - 10:00 PM</p>
-          <p class="products__main-text">Saturday - Sunday</p>
-          <p class="products__time-text">08:00 AM - 16:00 PM</p>
-        </div>
-        <div class="products__text-block">
-        <a class="products__secondary-text products__contacts" href="tel:+610383766284">
-          +61(0) 383 766 284 
-        </a>
-        <a class="products__secondary-text products__contacts"
-        href="mailto:noreply@envato.com">
-        noreply@envato.com
-        </a>
-      </div>
-      </li>
-      <li class="products__item">
-        <div class="products__location-block products__location-block--coffee">
-          <h3 class="products__location-title">cafe</h3>
-        </div>
-        <div class="products__text-block products__text-block--border">
-          <p class="products__main-text products__main-text--city">New York</p>
-          <p class="products__secondary-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-        </div>
-        <div class="products__text-block products__text-block--border">
-          <p class="products__main-text">Monday - Friday</p>
-          <p class="products__time-text">06:00 AM - 10:00 PM</p>
-          <p class="products__main-text">Saturday - Sunday</p>
-          <p class="products__time-text">08:00 AM - 16:00 PM</p>
-        </div>
-        <div class="products__text-block">
-          <a class="products__secondary-text products__contacts" href="tel:+610383766284">
-            +61(0) 383 766 284 
-          </a>
-          <a class="products__secondary-text products__contacts"
-          href="mailto:noreply@envato.com">
-          noreply@envato.com
-          </a>
-        </div>
-      </li>
-    </ul>
-    <button type="button" class="button products__button">Our Locations
-      <svg class="products__button-icon" width="7" height="10">
-        <use href="./images/icons/bigger-white.svg">
-        </use>
-      </svg>
-    </button>
-    <button type="button" class="button button--white products__button">Franchise
-      <svg class="products__button-icon products__button-icon--white" width="6" height="10">
-        <use href="./images/icons/bigger.svg">
-        </use>
-      </svg>
-    </button> -->
   </div>  
 </section>
