--- a/src/sass/components/products.scss
+++ b/src/sass/components/products.scss
@@ -1,62 +1,135 @@
-/* .products__section {
-  padding: 86px 0;
-  background-color: $bg-color;
+.products__section {
+  padding-top: 120px;
+  padding-bottom: 100px;
+  @include for-size(tablet) {
+    padding-top: 122px;
+    padding-bottom: 112px;
+  }
+  @include for-size(desktop) {
+    padding-top: 128px;
+    padding-bottom: 120px;
+  }
 }
 
 .products__container {
-  padding: 0px 50px;
+  padding: 0px 20px;
 
   @include for-size(tablet) {
-    padding: 0px 36px;
+    padding: 0px 34px;
   }
-
   @include for-size(desktop) {
-    padding: 0px 115px;
+    padding: 0px 114px;
   }
 }
 
+.products__text {
+  margin-bottom: 15px;
+
+  font-family: Titan One;
+  @include font(18px, 400, $second-color, 116%);
+  font-size: 18px;
+  line-height: 21px;
+
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.products__title {
+  margin-bottom: 140px;
+
+  font-family: Titan One;
+  @include font(34px, 400, $main-color, 115%);
+
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
 .products__list {
-  margin-bottom: 54px;
   @include for-size(tablet) {
     display: flex;
   }
 }
 
 .products__item {
-  background: $white-color;
-  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  position: relative;
   border-radius: 24px;
-  margin-bottom: 20px;
-  padding: 43px 20px;
+  margin-bottom: 130px;
+  padding: 40px 40px;
+  padding-top: 160px;
   &:last-child {
     margin-bottom: 0;
   }
 
+  &--ice-cream {
+    background: $ice-cream;
+  }
+  &--coffee {
+    background: $coffee;
+  }
+  &--milkshake {
+    background: $milkshake;
+  }
+
   @include for-size(tablet) {
-    margin-right: 30px;
+    margin-right: 20px;
     margin-bottom: 0;
-    width: calc((100% - 60px) / 3);
+    width: calc((100% - 40px) / 3);
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+  @include for-size(desktop) {
+    margin-right: 25px;
+    margin-bottom: 0;
+    width: calc((100% - 50px) / 3);
     &:last-child {
       margin-right: 0;
     }
   }
 }
 
-.products__location-block {
-  display: inline-block;
-  align-items: center;
-  text-align: center;
-
-  border-radius: 4px;
-  padding: 0px 25px;
-
-  &--coffee {
-    background-color: $coffee;
-  }
-  &--milkshake {
-    background-color: $milkshake;
-  }
+.products__item-pic {
+  width: 50%;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -25%;
+  transform: translateY(-50%);
 }
+
+.products__item-svg {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+}
+
+.products__item-title {
+  margin-bottom: 30px;
+
+  font-family: Titan One;
+  @include font(20px, 400, $white-color, 115%);
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+.products__item-text {
+  margin-bottom: 30px;
+
+  @include font(14px, 700, $white-color, 152%);
+  text-align: center;
+  letter-spacing: 0.04em;
+}
+
+.products__button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* 
+
 
 .products__location-title {
   text-transform: uppercase;
